apply plugin: 'java'
apply plugin: 'idea'

sourceCompatibility = 1.8
version = '1.0'

repositories {
    mavenCentral()
    maven { url "http://repo.spring.io/libs-snapshot" }
}

dependencies {
    compile "com.gemstone.gemfire:gemfire:8.1.0"
    compile("com.fasterxml.jackson.core:jackson-databind:2.5.1")
    testCompile group: 'junit', name: 'junit', version: '4.11'
}

task runfx(type:JavaExec) {
    main = 'FinanceUI'
    systemProperties System.getProperties()
    classpath = sourceSets.main.runtimeClasspath
    minHeapSize = "1G"
    maxHeapSize = "1G"
    jvmArgs = ["-XX:+UseConcMarkSweepGC", "-XX:+UseParNewGC"]
}
